[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc_lube"
description = "Proper Advent of Code lubricant."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Unlicense"}
authors = [{name = "salt-die", email = "salt-die@protonmail.com"}]
urls = {"repository" = "https://github.com/salt-die/aoc_lube"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4 >= 4.12.2",
    "requests >= 2.31.0",
    "tomlkit >= 0.12.3",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "aoc_lube.__version__"}

[tool.setuptools.package-data]
aoc_lube = ["*.txt"]

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F",  # pyflakes
    "E",  # pycodestyle - error
    "W",  # pycodestyle - warning
    "I",  # isort
]
ignore = [
    "D205",  # blank-line-after-summary -- This rule seems bugged for summaries that need more than one line.
]

fixable = ["ALL"]

[project.optional-dependencies]
utils = ["networkx >= 3.2.1", "numpy >= 1.26.0"]
