[metadata]
name = aoc_helper
version = attr: aoc_helper.__version__
author = salt-die
author_email = salt-die@protonmail.com
description = Advent of Code fetch/submit with various utilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salt-die/aoc_helper
license = Unlicense
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bs4
    networkx
    numpy
    requests
    tomlkit
