[metadata]
name = aoc_lube
version = attr: aoc_lube.__version__
author = salt-die
author_email = salt-die@protonmail.com
description = Proper Advent of Code lubricant.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salt-die/aoc_lube
license = Unlicense
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bs4
    networkx
    numpy
    requests
    tomlkit
